// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> renders Loader 1`] = `
<Loader__Container
  className="loader"
  inline={false}
>
  <Component
    color="#333333"
    size={40}
  />
</Loader__Container>
`;

exports[`<Loader /> renders Loader with a color and a small size 1`] = `
<Loader__Container
  className="loader"
  inline={false}
>
  <Component
    color="white"
    size={20}
  />
</Loader__Container>
`;

exports[`<Loader /> renders Loader with a white color 1`] = `
<Loader__Container
  className="loader"
  inline={false}
>
  <Component
    color="white"
    size={40}
  />
</Loader__Container>
`;

exports[`<Loader /> renders LoaderContainer 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Loader__Container-sc-15wqv6r-0",
        "isStatic": false,
        "rules": Array [
          "text-align:center;display:",
          [Function],
          ";",
          [Function],
          ";width:100%;div{margin:auto;}",
        ],
      },
      "displayName": "Loader__Container",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Loader__Container-sc-15wqv6r-0",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`<Loader /> renders an inline Loader 1`] = `
<Loader__Container
  className="loader"
  inline={true}
>
  <Component
    color="#333333"
    size={40}
  />
</Loader__Container>
`;

exports[`<Loader /> renders nothing 1`] = `""`;
